--- a/source/_partials/Head.ejs
+++ b/source/_partials/Head.ejs
@@ -4,4 +4,5 @@
 <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
 <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
 <link rel="stylesheet" href="vendor/css/owl.theme.default.min.css">
+<link rel="stylesheet" href="vendor/css/slick.css">
 <link rel="stylesheet" href="css/main.min.css?v=<%= new Date().getTime() %>">
