--- a/source/_partials/Main/Facility.ejs
+++ b/source/_partials/Main/Facility.ejs
@@ -3,8 +3,9 @@
 		<div class="row">
 			<div class="col-lg-5">
 				<h2 class="ss-title mb-4">Cơ sở vật chất</h2>
-				<p>Cơ sở vật chất đồ tập được nhập <span class="text-highlight">hoàn toàn trực tiếp từ Mỹ</span> (dụng cụ tập) và Ý (sàn tập giảm chấn 3 lớp tại khu vực Functional và Freeweight) (Không thông qua bên thứ 3 nào tại VN).<br>
-				Khu vực Functional <span class="text-highlight">trần cao nhất tại Việt Nam</span>, đem lại cảm giác tập thoải mái dẫn đến kết quả tập luyện tốt.</p>
+				<p>Nằm tại khu vực trung tâm Quận Ba Đình, TeeKiu có không gian tập luyện ấn tượng được đánh giá cao từ những chi tiết nhỏ nhất từ sàn tập giảm chấn 3 lớp đảm bảo sự an toàn, thiết bị và đồ tập được nhập hoàn toàn trực tiếp từ Mỹ  và Ý của các hãng hàng đầu cung cấp thiết bị Fitness: Technogym, Rogue, Les Mills, Boga.</p>
+				<p>Khu vực Functional trần cao nhất tại Việt Nam lên đến 7m, đem lại cảm giác tập thoải mái dẫn đến kết quả tập luyện tốt.</p>
+				<p>Đặc biệt hơn, lần đầu tiên tại Hà Nội hội viên được trải nghiệm bộ môn Yoga trên mặt nước với thảm tập Boga Mat.</p>
 			</div>
 			<div class="col-lg-6">
 				<ul class="facility-gallery">
