--- a/source/_partials/Main/Staff.ejs
+++ b/source/_partials/Main/Staff.ejs
@@ -5,9 +5,9 @@
   <div class="staff-detail">
     <div class="staff-detail-block">
       <h4 class="heading">
-        Nhân viên lễ tân của <span class="text-highlight">Teekiu</span><br>
+        Service Crew <span class="text-highlight">Teekiu</span><br>
         được <span class="text-highlight">chấm điểm cao nhất</span> trong<br>
-        hệ thống phòng tập tại Hà Nội
+        hệ thống các phòng tập cao cấp tại Hà Nội 
       </h4>
       <p class="text-quote">Theo Mystery Shopper từ Technogym</p>
     </div>
