--- a/source/_partials/Main/Header.ejs
+++ b/source/_partials/Main/Header.ejs
@@ -10,27 +10,49 @@
 
 
 	<section id="carousel-top" class="carousel slide" data-ride="carousel">
-	  <div class="carousel-inner">
+		<ol class="carousel-indicators">
+	    <li data-target="#carousel-top" data-slide-to="0" class="active"></li>
+	    <li data-target="#carousel-top" data-slide-to="1"></li>
+	    <li data-target="#carousel-top" data-slide-to="2"></li>
+	  </ol>
+		<div class="carousel-inner">
 
 
-      <!-- Slide 1 -->
-	    <article class="carousel-item active">
-	      <div class="carousel-detail">
-          <div class="container">
-            <div class="carousel-content-block">
-              <div class="carousel-caption-block">
-                <h1 class="heading"><span class="text-highlight">100%</span> đội ngũ PT <span class="text-highlight">chuyên nghiệp</span></h1>
-                <p>Được đào tạo bài bản có chứng chỉ quốc tế, được đầu tư đầy đủ, hiện đại và có kiến thức rõ ràng nhằm đem lại trải nghiệm tốt nhất cũng như đem lại hiệu quả tập luyện cao nhất.</p>
-              </div>
+			<!-- Slide 1 -->
+			<article class="carousel-item active">
+				<div class="carousel-detail">
+					<div class="container">
+						<div class="carousel-content-block">
+							<div class="carousel-caption-block">
+								<h1 class="heading">Hãy cùng khám phá gói tập luyện <span class="text-highlight">miễn phí 7 ngày</span> cực chất của TeeKiu</h1>
+								<br><br>
+								<a href="#" class="btn btn-outline btn-scroll">Khám phá ngay</a>
+							</div>
 
-              <img src="images/slide-1-model.min.png" alt="Model" class="carousel-img-model">
-            </div>
-          </div>
-        </div>
-	    </article>
+							<img src="images/slide-1-model.min.png" alt="Model" class="carousel-img-model">
+						</div>
+					</div>
+				</div>
+			</article>
 
 
+			<!-- Slide 2 -->
+			<article class="carousel-item">
+				<div class="carousel-detail">
+					<div class="container">
+						<div class="carousel-content-block">
+							<div class="carousel-caption-block">
+								<h1 class="heading"><span class="text-highlight">100%</span> đội ngũ Huấn luyện viên chuyên nghiệp,<br>được đào tạo bài bản <span class="text-highlight">có chứng chỉ quốc tế</span> từ nước ngoài và trong nước</h1>
+								<br><br>
+								<a href="#" class="btn btn-outline btn-scroll">Khám phá ngay</a>
+							</div>
 
-	  </div>
+							<img src="images/slide-1-model.min.png" alt="Model" class="carousel-img-model">
+						</div>
+					</div>
+				</div>
+			</article>
+
+		</div>
 	</section>
 </header>
