--- a/source/assets/scss/_utilities.scss
+++ b/source/assets/scss/_utilities.scss
@@ -83,3 +83,61 @@
     color: $primary-color;
   }
 }
+.btn-primary {
+  background-color: $primary-color;
+  border: none;
+  font-weight: 400;
+  color: $black;
+  &:hover {
+    background: $primary-color;
+    color: $black;
+  }
+  &.btn-arrow {
+    background-image: url(../images/arrow-right.min.svg);
+    background-repeat: no-repeat;
+    background-size: 12px auto;
+    background-position: right 12px center;
+    padding: 5px 30px 5px 12px;
+  }
+}
+
+/* Nav carousel */
+.nav-carousel {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255,255,255, 0.3);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  position: absolute;
+  transform: translateY(-50%);
+  top: 50%;
+  &.left {
+    left: -80px; 
+  }
+  &.right {
+    right: -80px;
+  }
+  .icon {
+    font-size: 30px;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+    &.icon-caret-left {
+      margin-top: -2px;
+    }
+    &.icon-caret-right {
+      margin-left: 5px;
+    }
+    &::before {
+      vertical-align: sub;
+    }
+  }
+  &:hover {
+    background: rgba(0,0,0,0.3);
+    .icon {
+      color: $primary-color;
+    }
+  }
+}
