--- a/source/assets/scss/main.scss
+++ b/source/assets/scss/main.scss
@@ -1,4 +1,5 @@
 @import url('//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900&subset=vietnamese');
+@import '../fonts/icon-font-custom/styles.css';
 @import 'mixin';
 @import 'variables';
 @import 'common';
