--- a/source/assets/scss/sections/_header-page.scss
+++ b/source/assets/scss/sections/_header-page.scss
@@ -22,7 +22,7 @@
     height: 100vh;
     width: 100%;
     max-height: 764px;
-    @include breakpoint(768, min) {
+    @include breakpoint(992, min) {
       .carousel-caption-block {
         max-width: 50%;
       }
@@ -37,6 +37,11 @@
         bottom: 0;
         right: -30px;
         height: 90%;
+      }
+    }
+    img {
+      @include breakpoint(991, max) {
+        display: none;
       }
     }
 	}
