--- a/source/index.ejs
+++ b/source/index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-	 <%- include _partials/Head %>
-  </head>
+	<head>
+		<% include _partials/Head %>
+	</head>
 
-  <body>
-    <%- include _partials/Main %>
+	<body>
+		<% include _partials/Main %>
 
-    <%- include _partials/Script %>
-  </body>
+		<% include _partials/Script %>
+	</body>
 </html>
