--- a/source/_partials/Main/Coach.ejs
+++ b/source/_partials/Main/Coach.ejs
@@ -1,141 +1,43 @@
 <% var coachs = [
 	{
-		firstname: 'Kamil',
-		lastname: 'Nguyen Van',
-		job: 'Master Trainer',
-		title1: 'Master Trainer',
-		title1_info: [
-			'8 năm làm huấn luyện viên cá nhân',
-			'Đào tạo các Huấn luyện viên Việt Nam',
-			'Kiến thức & kỹ năng chuyên môn Kickboxing, thể dục thể thao & dinh dưỡng sâu rộng',
-			'Chuyên gia thay đổi hình thể',
-			'Tư vấn & xây dựng các chế độ dinh dưỡng phù hợp với nhu cầu & tình trang sức khỏe'
-		],
-		imgPortrait: 'coach-2-thumb.min.jpg',
-		imgFullBody: 'coach-1.min.png'
-	},
-	{
 		firstname: 'KLAUDIA',
 		lastname: 'SALAMON',
 		job: 'Master Trainer',
-		intro: 'Bằng thạc sỹ Vật lý trị liệu, Physical Education Academy ở Krakow, Ba Lan, 3 năm thực hành trị liệu bằng phương pháp vật lý trị liệu, 5 năm làm Huẩn luyện viên cá nhân, Giảng dạy Các khóa học Huấn Luyện Viên cá nhân ở Ba Lan, Huấn luyện viên Cá nhân và Chuyên gia trị liệu Xoa bóp với các chứng chỉ sau:',
-		title1: 'Master Trainer',
-		title1_info: [
-			'Chứng chỉ huấn luyện viên cá nhân và Gym Instructor, hoàn thành trong World Trainers Academy, Được công nhận bởi REPS và NASM',
-			'Chứng chỉ Pilates Instruktor, chuyên môn: Matwork cấp độ I and II, hoàn thành khóa Body Balanced Pilates School',
-			'Chứng chỉ giảng viên chuyên môn: Strength Sports, đã hoàn thành tại Physical Education Academy ở Kraków',
-			'Chứng chỉ FMS Trainer',
-			'Chứng chỉ Blackroll Trainer – Chứng chỉ Quốc tế',
-			'Các khóa học massage cổ điển và thể thao'
-		],
-		title2: 'Chuyên môn',
-		title2_info: [
-			'Huấn luyện sức mạnh (thi đấu nâng cao)',
-			'Các chương trình giảm cân và thay đổi hình thể',
-			'Huấn luyện sức bền (thực hành Ultra running)',
-			'Vật lý trị liệu và phục hồi chức năng'
-		],
-		imgPortrait: 'coach-2-thumb.min.jpg',
-		imgFullBody: 'coach-1.min.png'
+		intro: 'Bằng thạc sỹ Vật lý trị liệu, Physical Education Academy ở Krakow, Ba Lan, 3 năm thực hành trị liệu bằng phương pháp vật lý trị liệu, 5 năm làm Huẩn luyện viên cá nhân, Giảng dạy Các khóa học Huấn Luyện Viên cá nhân ở Ba Lan, Huấn luyện viên Cá nhân và Chuyên gia trị liệu Xoa bóp với các chứng chỉ sau:<br>Master Trainer<br>- Chứng chỉ huấn luyện viên cá nhân và Gym Instructor, hoàn thành trong World Trainers Academy, Được công nhận bởi REPS và NASM<br>- Chứng chỉ Pilates Instruktor, chuyên môn: Matwork cấp độ I and II, hoàn thành khóa Body Balanced Pilates School<br>- Chứng chỉ giảng viên chuyên môn: Strength Sports, đã hoàn thành tại Physical Education Academy ở Kraków<br>- Chứng chỉ FMS Trainer<br>- Chứng chỉ Blackroll Trainer – Chứng chỉ Quốc tế<br>- Các khóa học massage cổ điển và thể thao. <br>Chuyên môn:<br>- Huấn luyện sức mạnh (thi đấu nâng cao)<br>- Các chương trình giảm cân và thay đổi hình thể<br>- Huấn luyện sức bền (thực hành Ultra running)<br>- Vật lý trị liệu và phục hồi chức năng.',
+		imgPortrait: 'coach1-min.min.jpg',
+		imgTransparent: 'coach1.min.png'
 	},
 	{
 		firstname: 'AMIT',
 		lastname: 'KUMAR',
 		job: 'Yoga Master',
-		title1: 'Chuyên môn',
-		title1_info: [
-			'Huấn luyện Yoga chuyên sâu: giúp  kết nối cơ thể với tinh thần, kiểm soát được sự căng  thẳng, tăng cường khả năng tập trung của não bộ và sức đề kháng của cơ thể. HLV Amit luôn đề cao những tác dụng của Yoga và mong muốn đem kiến thức, kỹ năng mình có được giúp người tập đạt kết quả nhanh nhất.'
-		],
-		title2: 'Giải thưởng',
-		title2_intro: [
-			'Giải nhất cuộc thi Yoga mở rộng của Ấn Độ (2014)',
-			'Giải nhất cuộc thi Vô Địch Yoga mở rộng toàn quốc (2014)',
-			'Giải nhất cuộc thi Yoga Đông Ấn lần thứ 5 (2009)',
-			'Vô địch giải đấu All Bengal Yoga Tele Yoga and Talent Contest (2007)',
-		],
-		title3: 'Bằng cấp',
-		title3_intro: [
-			'Tốt nghiệp loại xuất sắc khóa đào tạo 3 năm chuyên ngành Yoga trường Yoga Bangiya Sangeet Kala Kendra',
-			'Tốt nghiệp khóa học Yoga Therapy tại  viện nghiên cứu North Kolkata Yoga Culture and Meditation.'
-		],
-		title4: 'Kinh nghiệm',
-		title4_intro: [
-			'16 năm luyện tập',
-			'6 năm giảng dạy Yoga tại Ấn Độ'
-		],
-		imgPortrait: 'coach-3-thumb.min.jpg',
-		imgFullBody: 'coach-1.min.png'
+		intro: 'Chuyên môn:<br>- Huấn luyện Yoga chuyên sâu: giúp  kết nối cơ thể với tinh thần, kiểm soát được sự căng  thẳng, tăng cường khả năng tập trung của não bộ và sức đề kháng của cơ thể. HLV Amit luôn đề cao những tác dụng của Yoga và mong muốn đem kiến thức, kỹ năng mình có được giúp người tập đạt kết quả nhanh nhất.<br>Giải thưởng:<br>- Giải nhất cuộc thi Yoga mở rộng của Ấn Độ (2014)<br>- Giải nhất cuộc thi Vô Địch Yoga mở rộng toàn quốc (2014)<br>- Giải nhất cuộc thi Yoga Đông Ấn lần thứ 5 (2009)<br>- Vô địch giải đấu All Bengal Yoga Tele Yoga and Talent Contest (2007)<br>Bằng cấp:<br>- Tốt nghiệp loại xuất sắc khóa đào tạo 3 năm chuyên ngành Yoga trường Yoga Bangiya Sangeet Kala Kendra<br>- Tốt nghiệp khóa học Yoga Therapy tại  viện nghiên cứu North Kolkata Yoga Culture and Meditation.<br>Kinh nghiệm:<br>- 16 năm luyện tập<br>- 6 năm giảng dạy Yoga tại Ấn Độ',
+		imgPortrait: 'coach2-min.min.jpg',
+		imgTransparent: 'coach2.min.png'
 	},
 	{
 		firstname: 'TINY',
 		lastname: 'LINH NGUYỄN',
 		job: 'GroupX, Manager',
-		title1: 'GroupX Coordinator',
-		title1_info: [
-			'Slogan : “Have fun when you work out and it won’t feel like work”'
-		],
-		title2: 'Kinh Nghiệm',
-		title2_info: [
-			'6 năm biểu diễn:  Sexy dance, Belly dance, Latin,…',
-			'2 năm quản lý GroupX',
-			'3 năm giảng dạy các môn: Freestyle (bums and tums, Step, Crunch, Shape up, Zumba,…), Lesmills (Bodycombat, Bodypump), Body system (Power jump), Art (Sexy dance, Belly dance,…)'
-		],
-		imgPortrait: 'coach-4-thumb.min.jpg',
-		imgFullBody: 'coach-1.min.png'
+		intro: 'GroupX Coordinator<br>Slogan: “Have fun when you work out and it won’t feel like work”<br>Kinh Nghiệm:<br>- 6 năm biểu diễn:  Sexy dance, Belly dance, Latin,…<br>- 2 năm quản lý GroupX<br>- 3 năm giảng dạy các môn: Freestyle (bums and tums, Step, Crunch, Shape up, Zumba,…), Lesmills (Bodycombat, Bodypump), Body system (Power jump), Art (Sexy dance, Belly dance,…)',
+		imgPortrait: 'coach3-min.min.jpg',
+		imgTransparent: 'coach3.min.png'
 	}, 
 	{
 		firstname: 'JIMMY',
 		lastname: 'TRẦN THÀNH',
 		job: 'Trainer',
-		title1: 'Học vấn',
-		title1_info: [
-			'Chứng chỉ huấn luyện viên quốc gia.',
-			'Chứng chỉ vđv muay Thái, Boxing',
-			'Đã đạt thành tích trong chương trình : “12 Tuần thay đổi hình thể.”',
-			'3 năm kinh nghiệm làm huấn luyện viên.'
-		],
-		title2: 'Kinh Nghiệm: Huấn luyện viên cá nhân tại',
-		title2_info: [
-			'Trung tâm thể dục thể thao Active Fitness & Yoga. Từ 12/2014 – 05/2016.',
-			'Trung tâm thể dục thể thao USA Fitness & Yoga. Từ 06/2016 – 08/2016',
-			'Trung tâm thể dục thể thao SS Club. Từ 09/2016 – 02/2017',
-			'Trung tâm thể dục thể thao AMS Sport. Từ 03/2017-05/2017'
-		],
-		title3: 'Điểm mạnh',
-		title3_info: [
-			'Chuyên vể các bài tập Functional , Boxing giúp giảm cân hiệu quả',
-			'Hướng dẫn tập luyện các bài tập chức năng cho người bị các bệnh về xương khớp, thoái hóa'
-		],
-		imgPortrait: 'coach-4-thumb.min.jpg',
-		imgFullBody: 'coach-1.min.png'
+		intro: 'Học vấn:<br>- Chứng chỉ huấn luyện viên quốc gia.<br>- Chứng chỉ vđv muay Thái, Boxing<br>- Đã đạt thành tích trong chương trình : “12 Tuần thay đổi hình thể.”<br>- 3 năm kinh nghiệm làm huấn luyện viên.<br>Kinh Nghiệm: Huấn luyện viên cá nhân tại<br>- Trung tâm thể dục thể thao Active Fitness & Yoga. Từ 12/2014 – 05/2016.<br>- Trung tâm thể dục thể thao USA Fitness & Yoga. Từ 06/2016 – 08/2016<br>- Trung tâm thể dục thể thao SS Club. Từ 09/2016 – 02/2017<br>Trung tâm thể dục thể thao AMS Sport. Từ 03/2017-05/2017<br>Điểm mạnh:<br>- Chuyên vể các bài tập Functional , Boxing giúp giảm cân hiệu quả<br>- Hướng dẫn tập luyện các bài tập chức năng cho người bị các bệnh về xương khớp, thoái hóa',
+		imgPortrait: 'coach4-min.min.jpg',
+		imgTransparent: 'coach4.min.png'
 	}, 
 	{
 		firstname: 'KENT',
 		lastname: 'HOÀNG LONG',
 		job: 'Manager',
-		title1: 'Manager',
-		title1_info: [
-			'Có hơn 10 năm kinh nghiệm thi đấu thể hình chuyên nghiệp tại Việt Nam , hơn 7 năm kinh nghiệm Fitness , đã được đào tạo master tai Technogyms Việt Nam'
-		],
-		title2: 'Thế mạnh',
-		title2_info: [
-			'Strength , Funtional , các trường hợp có vấn đề về bệnh lý'
-		],
-		title3: 'Gold medal  ',
-		title3_info: [
-			'2009 – Opening Fitness Club Competition in Vung Tau, Vietnam',
-			'2010 – National Youth Fitness Binh Duong Province Competion',
-			'2011 – National Fitness Club Competion',
-			'2014 – Opening Fitness Club Competition in Vung Tau, Vietnam'
-		],
-		title4: 'Silver medal',
-		title4_info: [
-			'2011 – National Fitness Awards',
-			'2012 – National Fitness Club Awards',
-			'2014 – National Fitness Club Awards'
-		],
-		imgPortrait: 'coach-4-thumb.min.jpg',
-		imgFullBody: 'coach-1.min.png'
+		intro: 'Manager:<br>- Có hơn 10 năm kinh nghiệm thi đấu thể hình chuyên nghiệp tại Việt Nam , hơn 7 năm kinh nghiệm Fitness , đã được đào tạo master tai Technogyms Việt Nam.<br>Thế mạnh:<br>- Strength , Funtional , các trường hợp có vấn đề về bệnh lý<br>Gold medal:<br>- 2009 – Opening Fitness Club Competition in Vung Tau, Vietnam<br>- 2010 – National Youth Fitness Binh Duong Province Competion<br>- 2011 – National Fitness Club Competion<br>- 2014 – Opening Fitness Club Competition in Vung Tau, Vietnam<br>Silver medal:<br>- 2011 – National Fitness Awards<br>- 2012 – National Fitness Club Awards<br>- 2014 – National Fitness Club Awards',
+		imgPortrait: 'coach5-min.min.jpg',
+		imgTransparent: 'coach5.min.png'
 	}
 ]; %>
 
@@ -167,19 +69,20 @@
 	<div class="container coach-carousel-control-w">
 		<div class="coach-carousel-control">
 			<div>
-				<% coachs.forEach(function(coach) { %>
+				<% coachs.forEach(function(coach, index) { %>
 					<article class="coach-item">
-						<!-- <div class="coach-item-img img-bg" data-src="images/<%= coach.imgPortrait %>"></div> -->
 						<img class="coach-item-img" src="images/<%= coach.imgPortrait %>" alt="<%= coach.firstname + ' ' + coach.lastname %>">
 						<div class="coach-item-detail">
 							<div class="coach-info">
 								<h6><%= coach.firstname + ' ' + coach.lastname %></h6>
 								<span class="text-highlight"><%= coach.job %></span>
 							</div>
-							<button class="btn btn-primary btn-arrow">Xem thêm</button>
+							<button class="btn btn-primary btn-arrow btn-show-coach" data-index="<%= index %>" data-toggle="modal" data-target="#coachModal">Xem thêm</button>
 						</div>
 					</article>
 				<% }); %>
 		</div>
 	</div>
 </section>
+
+<% include CoachDialog %>
