--- a/source/_partials/Main/Header.ejs
+++ b/source/_partials/Main/Header.ejs
@@ -26,7 +26,7 @@
 							<div class="carousel-caption-block">
 								<h1 class="heading">Hãy cùng khám phá gói tập luyện <span class="text-highlight">miễn phí 7 ngày</span> cực chất của TeeKiu</h1>
 								<br><br>
-								<a href="#" class="btn btn-outline btn-scroll">Khám phá ngay</a>
+								<a href="#ss-benefit" class="btn btn-outline btn-scroll">Khám phá ngay</a>
 							</div>
 
 							<img src="images/slide-1-model.min.png" alt="Model" class="carousel-img-model">
@@ -40,14 +40,28 @@
 			<article class="carousel-item">
 				<div class="carousel-detail">
 					<div class="container">
-						<div class="carousel-content-block">
-							<div class="carousel-caption-block">
+						<div class="carousel-content-block content-full">
+							<div class="carousel-caption-block caption-full text-md-center">
 								<h1 class="heading"><span class="text-highlight">100%</span> đội ngũ Huấn luyện viên chuyên nghiệp,<br>được đào tạo bài bản <span class="text-highlight">có chứng chỉ quốc tế</span> từ nước ngoài và trong nước</h1>
 								<br><br>
-								<a href="#" class="btn btn-outline btn-scroll">Khám phá ngay</a>
+								<a href="#ss-staff" class="btn btn-outline btn-scroll">Tìm hiểu thêm</a>
 							</div>
+						</div>
+					</div>
+				</div>
+			</article>
 
-							<img src="images/slide-1-model.min.png" alt="Model" class="carousel-img-model">
+
+			<!-- Slide 3 -->
+			<article class="carousel-item">
+				<div class="carousel-detail">
+					<div class="container">
+						<div class="carousel-content-block content-full">
+							<div class="carousel-caption-block caption-full text-md-center">
+								<h3 class="heading"><span class="text-highlight">100%</span> thiết bị tập hàng đầu thế giới như<br>Technogym, Rogue, Les Mills, Boga được <span class="text-highlight">nhập khẩu trực tiếp</span> từ Ý và Mỹ<br>Phòng tập được thiết kế <span class="text-highlight">đạt chuẩn quốc tế</span> với diện tích rộng rãi<br>lên đến 3000 m2</h3>
+								<br><br>
+								<a href="#ss-staff" class="btn btn-outline btn-scroll">Tìm hiểu thêm</a>
+							</div>
 						</div>
 					</div>
 				</div>
