--- a/source/_partials/Main/Process.ejs
+++ b/source/_partials/Main/Process.ejs
@@ -19,7 +19,7 @@
 
 <section class="ss-process ss-padding" id="ss-process">
 	<div class="container">
-		<h2 class="ss-title title-center title-dark">Lộ trình tập luyện</h2>
+		<h2 class="ss-title title-center title-dark">Quy trình để thành Member của TeeKiu<br>không thể đơn giản hơn</h2>
 
 		<section class="process-carousel owl-carousel owl-theme mt-5">
 			<% processes.forEach(function(process) { %>
