--- a/source/_partials/Main/Testimonial.ejs
+++ b/source/_partials/Main/Testimonial.ejs
@@ -1,18 +1,16 @@
 <% var testimonials = [
     {
-        quote: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis laudantium laborum nihil cupiditate, in architecto",
+        quote: "Thật sự ấn tượng với không gian của TeeKiu Sport & Fitness, cứ ngỡ như mình đang tập luyện tại không gian của phòng tập tại nước ngoài, từ dịch vụ cho đến các bài tập được các huấn luyện viên và đội ngũ lễ tân tận tình hướng dẫn. Đến với TeeKiu tập luyện đã trở thành thói quen của tôi khi nào mà không hay.",
         src: "images/avatar.min.jpg",
-        name: "Adam Johnson",
-        carrer: "Business",
-        age: "23",
+        name: "Chị Vũ Thị Thanh Hằng",
+        carrer: "Phó Phòng QLCNTT - Vietinbank",
         active: true
     },
     {
-        quote: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis laudantium laborum nihil cupiditate, in architecto",
+        quote: "Trước khi tập ở TeeKiu mình cũng đã trải nghiệm rất nhiều phòng tập, nhưng khi biết đến TeeKiu và đến tập thử, điều đầu tiên làm mình bất ngờ là không gian rất chuyên nghiệp và rộng rãi của TeeKiu. Với sự tận tình hướng dẫn của các bạn PT về chế độ dinh dưỡng và bài tập đối với tạng người của mình, không còn đắn đo gì mình quyết định tập tại TeeKiu tuy mình đang sinh sống và làm việc tại khu vực Đống Đa,",
         src: "images/avatar.min.jpg",
-        name: "Nick",
-        carrer: "Business",
-        age: "52",
+        name: "Anh Bùi Hải Phong",
+        carrer: "Operation Manager tại Topica Native Thailand",
         active: false
     }
 ] %>
@@ -22,8 +20,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-7">
-				<div class="embed-responsive embed-responsive-16by9">
-				    <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0"></iframe>
+				<div class="embed-responsive embed-responsive-4by3">
+				    <iframe class="embed-responsive-item" src="//www.youtube.com/embed/m0QSitlD8vU?rel=0"></iframe>
 				</div>
 			</div>
 			<div class="col-lg-5">
@@ -46,7 +44,7 @@
                                                 <img src="<%= testimonial.src %>" alt="avatar" class="d-flex mr-3">
                                                 <div class="media-body align-self-center">
                                                     <h5 class="mt-0"><%= testimonial.name %></h5>
-                                                    <p><%= testimonial.carrer %> - <%= testimonial.age %> years old</p>
+                                                    <p><%= testimonial.carrer %>
                                                 </div>
                                             </div>
                                         </div>
