--- a/source/_partials/Main/Header.ejs
+++ b/source/_partials/Main/Header.ejs
@@ -57,8 +57,8 @@
 				<div class="carousel-detail">
 					<div class="container">
 						<div class="carousel-content-block content-full">
-							<div class="carousel-caption-block caption-full text-md-center">
-								<h3 class="heading"><span class="text-highlight">100%</span> thiết bị tập hàng đầu thế giới như<br>Technogym, Rogue, Les Mills, Boga được <span class="text-highlight">nhập khẩu trực tiếp</span> từ Ý và Mỹ<br>Phòng tập được thiết kế <span class="text-highlight">đạt chuẩn quốc tế</span> với diện tích rộng rãi<br>lên đến 3000 m2</h3>
+							<div class="carousel-caption-block caption-full text-md-center  mx-md-auto">
+								<h3 class="heading"><span class="text-highlight">100%</span> thiết bị tập hàng đầu thế giới như<br>Technogym, Rogue, Les Mills, Boga được <span class="text-highlight">nhập khẩu trực tiếp</span> từ Ý và Mỹ<br>Phòng tập được thiết kế <span class="text-highlight">đạt chuẩn quốc tế</span> với diện tích rộng rãi lên đến 3000 m2</h3>
 								<br><br>
 								<a href="#ss-staff" class="btn btn-outline btn-scroll">Tìm hiểu thêm</a>
 							</div>
