--- a/source/_partials/Main/Register.ejs
+++ b/source/_partials/Main/Register.ejs
@@ -1,18 +1,19 @@
 <section class="ss-register" id="ss-register">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-5">
+			<div class="col-lg-5 col-md-6">
 				<div class="register-info-block">
 					<h2 class="ss-title">Nhận ngay thẻ tập thử</h2>
 					<p>Nếu như bạn không muốn phải nhìn số tiền mình kiếm ra được lúc trẻ để tiêu tán cho bệnh tật thuốc men khi về già thì hãy đứng dậy và bắt đầu luyện tập ngay từ bây giờ. Teekiu Sport &amp; Fitness sẽ mang những kiến thức đầy đủ và phù hợp nhất để tư vấn chương trình luyện tập đến bạn.</p>
 					<p>Máy tầm soát Tanita chỉ có mặt tại những bệnh viện cao cấp và lớn trên thế giới.</p>
 				</div>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 d-lg-block d-none">
 				<img src="images/register-model.min.png" alt="register model">
 			</div>
-			<div class="col-lg-4">
-				<form class="form-register">
+			<div class="col-lg-4 col-md-6">
+				<form class="form-register" id="form-register">
+					<div id="alert-box"><div class="alert mb-5 py-3 px-3" role="alert"></div></div>
 					<div class="form-group">
 						<input type="text" class="form-control" name="name">
 						<label>Họ tên</label>
