--- a/source/_partials/Script.ejs
+++ b/source/_partials/Script.ejs
@@ -3,4 +3,5 @@
 <script src="vendor/js/bootstrap.min.js"></script>
 <script src="vendor/js/owl.carousel.min.js"></script>
 <script src="vendor/js/slick.min.js"></script>
+<script src="vendor/js/validate.min.js"></script>
 <script src="js/main.min.js?v=<%= new Date().getTime() %>"></script>
