--- a/source/assets/scss/sections/_header-page.scss
+++ b/source/assets/scss/sections/_header-page.scss
@@ -47,7 +47,7 @@
     &.content-full {
       @include breakpoint(992, min) {
         .carousel-caption-block {
-          max-width: 100%;
+          width: 100%;
         }
       }
     }
