--- a/source/_partials/Main/Benefit.ejs
+++ b/source/_partials/Main/Benefit.ejs
@@ -8,31 +8,31 @@
     "srcBackground": "images/22.min.jpg"
   },
   {
-    "title": "Functional",
+    "title": "Yoga",
     "srcBackground": "images/33.min.jpg"
   },
   {
-    "title": "Pakour",
+    "title": "Yoga Master",
     "srcBackground": "images/44.min.jpg"
   },
   {
-    "title": "Fitkid",
+    "title": "Yoga Class",
     "srcBackground": "images/55.min.jpg"
   },
   {
-    "title": "Fitkid",
+    "title": "PT",
     "srcBackground": "images/66.min.jpg"
   },
   {
-    "title": "Fitkid",
+    "title": "Kickboxing",
     "srcBackground": "images/77.min.jpg"
   },
   {
-    "title": "Fitkid",
+    "title": "Group X",
     "srcBackground": "images/88.min.jpg"
   },
   {
-    "title": "Fitkid",
+    "title": "Functional",
     "srcBackground": "images/99.min.jpg"
   }
 ]; %>
