--- a/source/_partials/Main/Header.ejs
+++ b/source/_partials/Main/Header.ejs
@@ -41,8 +41,8 @@
 				<div class="carousel-detail">
 					<div class="container">
 						<div class="carousel-content-block content-full">
-							<div class="carousel-caption-block caption-full text-md-center">
-								<h1 class="heading"><span class="text-highlight">100%</span> đội ngũ Huấn luyện viên chuyên nghiệp,<br>được đào tạo bài bản <span class="text-highlight">có chứng chỉ quốc tế</span> từ nước ngoài và trong nước</h1>
+							<div class="carousel-caption-block">
+								<h1 class="heading">Together, we build<br><span class="text-highlight">the best version</span> of ourselves</h1>
 								<br><br>
 								<a href="#ss-staff" class="btn btn-outline btn-scroll">Tìm hiểu thêm</a>
 							</div>
@@ -56,9 +56,10 @@
 			<article class="carousel-item">
 				<div class="carousel-detail">
 					<div class="container">
-						<div class="carousel-content-block content-full">
-							<div class="carousel-caption-block caption-full text-md-center  mx-md-auto">
-								<h3 class="heading"><span class="text-highlight">100%</span> thiết bị tập hàng đầu thế giới như<br>Technogym, Rogue, Les Mills, Boga được <span class="text-highlight">nhập khẩu trực tiếp</span> từ Ý và Mỹ<br>Phòng tập được thiết kế <span class="text-highlight">đạt chuẩn quốc tế</span> với diện tích rộng rãi lên đến 3000 m2</h3>
+						<div class="carousel-content-block">
+							<div class="carousel-caption-block">
+								<h3 class="heading">Cơ sở vật chất <span class="text-highlight">được đầu tư đầy đủ</span> với <span class="text-highlight">kiến thức chuyên sâu</span></h3>
+								<p class="lead"><span class="text-highlight">100%</span> thiết bị tập hàng đầu thế giới như<br>Technogym, Rogue, Les Mills, Boga được <span class="text-highlight">nhập khẩu trực tiếp</span> từ Ý và Mỹ<br>Phòng tập được thiết kế <span class="text-highlight">đạt chuẩn quốc tế</span> với diện tích rộng rãi lên đến 3000 m2</p>
 								<br><br>
 								<a href="#ss-staff" class="btn btn-outline btn-scroll">Tìm hiểu thêm</a>
 							</div>
