--- a/source/_partials/Main/Testimonial.ejs
+++ b/source/_partials/Main/Testimonial.ejs
@@ -1,14 +1,14 @@
 <% var testimonials = [
     {
         quote: "Thật sự ấn tượng với không gian của TeeKiu Sport & Fitness, cứ ngỡ như mình đang tập luyện tại không gian của phòng tập tại nước ngoài, từ dịch vụ cho đến các bài tập được các huấn luyện viên và đội ngũ lễ tân tận tình hướng dẫn. Đến với TeeKiu tập luyện đã trở thành thói quen của tôi khi nào mà không hay.",
-        src: "images/avatar.min.jpg",
+        src: "images/avatar-1.min.jpg",
         name: "Chị Vũ Thị Thanh Hằng",
         carrer: "Phó Phòng QLCNTT - Vietinbank",
         active: true
     },
     {
         quote: "Trước khi tập ở TeeKiu mình cũng đã trải nghiệm rất nhiều phòng tập, nhưng khi biết đến TeeKiu và đến tập thử, điều đầu tiên làm mình bất ngờ là không gian rất chuyên nghiệp và rộng rãi của TeeKiu. Với sự tận tình hướng dẫn của các bạn PT về chế độ dinh dưỡng và bài tập đối với tạng người của mình, không còn đắn đo gì mình quyết định tập tại TeeKiu tuy mình đang sinh sống và làm việc tại khu vực Đống Đa,",
-        src: "images/avatar.min.jpg",
+        src: "images/avatar-2.min.jpg",
         name: "Anh Bùi Hải Phong",
         carrer: "Operation Manager tại Topica Native Thailand",
         active: false
