--- a/source/_partials/Head.ejs
+++ b/source/_partials/Head.ejs
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+<meta name="viewport" content="width=500, initial-scale=1">
 <title>Teekiu Landing page</title>
 <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
 <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
