--- a/source/assets/scss/_utilities.scss
+++ b/source/assets/scss/_utilities.scss
@@ -146,11 +146,52 @@
 *:not(.coach-modal) .nav-carousel {
   @include breakpoint(575, max) {
     z-index: 100;
+    width: 30px;
+    height: 30px;
+    .icon {
+      font-size: 16px;
+    }
     &.left {
-      left: 30px;
+      left: 15px;
     }
     &.right {
-      right: 30px;
+      right: 15px;
+      .icon {
+        margin-top: -2px;
+        margin-left: 3px;
+      }
+    }
+  }
+}
+
+.coach-modal .nav-carousel {
+  @include breakpoint(767, max) {
+    width: 30px;
+    height: 30px;
+    top: 30px;
+    z-index: 1;
+    border: solid 1px rgba($black, 0.3);
+    &:hover {
+      background-color: $primary-color;
+      border-color: $primary-color;
+      .icon {
+        color: white;
+      }
+    }
+    .icon {
+      font-size: 16px;
+      color: $black;
+    }
+    &.left {
+      left: 24px;
+    }
+    &.right {
+      right: auto;
+      left: 60px;
+      .icon {
+        margin-top: -2px;
+        margin-left: 3px;
+      }
     }
   }
 }
