--- a/source/assets/scss/sections/_coach-modal.scss
+++ b/source/assets/scss/sections/_coach-modal.scss
@@ -1,8 +1,8 @@
-.modal.fade.show {
-	display: flex !important;
-	justify-content: center;
-	align-items: center;
-}
+// .modal.fade.show {
+// 	display: flex !important;
+// 	justify-content: center;
+// 	align-items: center;
+// }
 
 .modal {
 	.modal-content {
@@ -16,11 +16,17 @@
 	    position: absolute;
 	    color: white;
 	    font-size: 30px;
+	    z-index: 1;
+	    @include breakpoint(767, max) {
+	    	color: $black;
+	    	right: 24px;
+	    	top: 35px;
+	    }
 	}
 }
 
 .modal-backdrop.show {
-	opacity: 0.8;
+	opacity: 0.95;
 }
 
 .modal-fluid {
@@ -58,8 +64,13 @@
 		@include breakpoint(1200, min) {
 			margin-top: 86px;
 		}
+		@include breakpoint(767, max) {
+			font-size: 24px;
+			margin-top: 30px;
+		}
 	}
 	.coach-content {
+		text-align: justify;
 		@include breakpoint(1200, min) {
 			padding-top: 1px;
 			padding-bottom: 30px;
